# triportreat

./: Cargo.toml  README.md  backplate.stl  case.FCStd  case.stl  knob.stl  plate.FCStd  plate.FCStd1
src/: buffer.rs  main.rs  sdl.rs
src/gadget/: mod.rs
src/hardware/: mod.rs  pi.rs  sdl.rs
src/screen/: fb.rs  mod.rs  sdl.rs
test/data/: sl.json
