[package]
name = "triportreat"
version = "0.1.0"
authors = ["Emil Hernvall <emil@c0la.se>"]
edition = "2018"

[features]
default = ["hw-sdl"]
hw-sdl = ["sdl2"]
hw-pi = ["framebuffer", "rppal"]

[dependencies]
rusttype = "0.9.2"
ttf-noto-sans = "0.1.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
argh = "0.1"
chrono = { version = "0.4", features = ["serde"] }
ureq = { version = "1.5", default-features = false, features = ["json", "native-tls"] }
framebuffer = { version = "0.1.7", optional = true }
sdl2 = { version = "0.34", optional = true }
openssl = { version = "0.10.29", features = ["vendored"] }
rppal = { version = "0.11.3", optional = true }
